# cppm_lw

./: .gitignore
diploma/: CMakeLists.txt
diploma/race_sim_app/: main.cpp
diploma/race_sim_lib/: CMakeLists.txt  air_race.h  air_vehicle.h  broom.cpp  broom.h  combined_race.cpp  eagle.cpp  eagle.h  enums.h  ground_race.h  kentavr.h  offroad_shoes.h  race.cpp  race.h  teppich_jet.cpp  teppich_jet.h  vehicle.h  vehicle_collection.cpp
diploma/vehicles/: CMakeLists.txt  air_race.cpp  camel.cpp  camel.h  combined_race.cpp  combined_race.h  ground_race.cpp  ground_vehicle.cpp  ground_vehicle.h  kentavr.cpp  main.cpp  offroad_shoes.cpp  race.cpp  race.h  super_camel.cpp  super_camel.h  vehicle_collection.h
hw_1/: hw_1.cpp  hw_1.sln  hw_1.vcxproj
hw_10_1/: CMakeLists.txt  main.cpp
hw_10_2/: CMakeLists.txt  hw_10_2.cpp
hw_10_2/quadrangles/: quadrangle.h  rectangle.cpp  square.cpp  square.h
hw_10_2/shape/: shape.h
hw_10_2/triangles/: triangle.cpp
hw_11_3/: CMakeLists.txt
hw_11_3/app/: main.cpp
hw_11_3/leaver/: leaver.h
hw_2_1/: hw_2_1.cpp  hw_2_1.sln  hw_2_1.vcxproj  hw_2_1.vcxproj.filters
hw_2_2/: hw_2_2.cpp  hw_2_2.sln  hw_2_2.vcxproj  hw_2_2.vcxproj.filters
hw_2_3/: hw_2_3.cpp  hw_2_3.sln  hw_2_3.vcxproj  hw_2_3.vcxproj.filters
hw_3_1/: hw_3_1.cpp  hw_3_1.sln  hw_3_1.vcxproj  hw_3_1.vcxproj.filters
hw_3_2/: hw_3_2.cpp  hw_3_2.sln  hw_3_2.vcxproj  hw_3_2.vcxproj.filters
hw_4_1/: hw_4_1.cpp  hw_4_1.sln  hw_4_1.vcxproj  hw_4_1.vcxproj.filters
hw_4_2/: hw_4_2.cpp  hw_4_2.sln  hw_4_2.vcxproj  hw_4_2.vcxproj.filters
hw_5_1/: hw_5_1.cpp  hw_5_1.sln  hw_5_1.vcxproj  hw_5_1.vcxproj.filters
hw_5_2/: hw_5_2.cpp  hw_5_2.sln  hw_5_2.vcxproj  hw_5_2.vcxproj.filters
hw_5_3/: hw_5_3.cpp  hw_5_3.sln  hw_5_3.vcxproj  hw_5_3.vcxproj.filters
hw_6_1/: hw_6_1.cpp  hw_6_1.sln  hw_6_1.vcxproj  hw_6_1.vcxproj.filters  maths.cpp  maths.h
hw_6_2/: controller.cpp  controller.h  counter.cpp  counter.h  hw_6_2.cpp  hw_6_2.sln  hw_6_2.vcxproj  hw_6_2.vcxproj.filters
hw_6_3/: equilateral_triangle.h  hw_6_3.cpp  hw_6_3.sln  hw_6_3.vcxproj  hw_6_3.vcxproj.filters  isosceles-triangle.cpp  isosceles_triangle.h  parallelogram.h  quadrangle.cpp  rectangle.h  rhombus.h  right_triangle.cpp
hw_7_1/: hw_7_1.cpp  hw_7_1.sln  hw_7_1.vcxproj  hw_7_1.vcxproj.filters
hw_7_2/: hw_7_2.sln  hw_7_2.vcxproj  hw_7_2.vcxproj.filters
hw_8_1/: hw_8_1.cpp  hw_8_1.sln  hw_8_1.vcxproj  hw_8_1.vcxproj.filters
hw_8_2/: creation_errors.cpp  creation_errors.h  equilateral_triangle.cpp  hw_8_2.cpp  hw_8_2.sln  hw_8_2.vcxproj  hw_8_2.vcxproj.filters  (+7 more)
(+23 files in other folders)
